Implemented new REST API endpoint getMergedRelation() Improved Omnikeeper OIA
